<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    >

  <TextView
      android:layout_centerHorizontal="true"
      android:text="@string/hello_world"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/textView"
      />

  <Button
      android:background="@color/orange"
      android:layout_marginTop="10dp"
      style="?android:attr/borderlessButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/spotify"
      android:id="@+id/spotifysteamer"
      android:layout_below="@+id/textView"
      android:layout_alignEnd="@+id/capstone"
      android:layout_alignStart="@+id/capstone"
      />
  <Button
      android:background="@color/orange"
      android:layout_marginTop="5dp"
      style="?android:attr/borderlessButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/scoreapp"
      android:id="@+id/scoresapp"
      android:layout_below="@+id/spotifysteamer"
      android:layout_alignStart="@+id/spotifysteamer"
      android:layout_alignEnd="@+id/spotifysteamer"
      />
  <Button
      android:background="@color/orange"
      android:layout_marginTop="5dp"
      style="?android:attr/borderlessButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/libraryapp"
      android:id="@+id/liberayapp"
      android:layout_below="@+id/scoresapp"
      android:layout_alignStart="@+id/scoresapp"
      android:layout_alignEnd="@+id/scoresapp"
      />

  <Button
      android:background="@color/orange"
      android:layout_marginTop="5dp"
      style="?android:attr/borderlessButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/buildbigger"
      android:id="@+id/buildbigger"
      android:layout_below="@+id/liberayapp"
      android:layout_alignStart="@+id/liberayapp"
      android:layout_alignEnd="@+id/liberayapp"
      />

  <Button
      android:background="@drawable/capstone"
      android:layout_marginTop="5dp"
      style="?android:attr/borderlessButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/xyzreader"
      android:id="@+id/xyzreader"
      android:layout_below="@+id/buildbigger"
      android:layout_alignStart="@+id/liberayapp"
      android:layout_alignEnd="@+id/liberayapp"
      />

  <Button
      android:background="@drawable/capstone"
      android:layout_marginTop="5dp"
      style="?android:attr/borderlessButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ownapp"
      android:id="@+id/capstone"
      android:layout_below="@+id/xyzreader"
      android:layout_centerHorizontal="true"
      />

</RelativeLayout>
